@@ -61,7 +61,7 @@
 
      <section title="References">
         <ul>
-            <li><a href="pooling.html">Other pooling examples</a></li>
+            <li><a href="jdo-pooling.html">Other pooling examples</a></li>
         </ul>
      </section>
     
